clapi_macros/test_suite/tests/ui/fail/invalid_subcommand_value/invalid_subcommand_description.stderr
error: custom attribute panicked
 --> $DIR/invalid_subcommand_description.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: `description` must be a string literal
